--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "async": "^1.5.0",
     "chai": "^3.4.1",
-    "config": "^1.17.1",
+    "config-sp": "^0.1.0",
     "ioredis": "^1.9.0",
     "mocha": "^2.3.4",
     "should": "^7.1.1",
