--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
   "name": "ero",
   "version": "0.0.1",
-  "description": "",
+  "description": "An error library provides simple functions for building your own customized errors.",
   "main": "index.js",
+  "keywords": [
+    "error",
+    "customized"
+  ],
   "scripts": {
     "test": "node test"
   },
+  "engines": {
+    "node": "^0.12.0"
+  },
   "author": "ADoyle <adoyle.h@gmail.com>",
   "license": "Apache-2.0",
+  "homepage": "https://github.com/adoyle-h/Ero.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adoyle-h/Ero.js.git"
+  },
+  "bugs": {
+    "url": "https://github.com/adoyle-h/Ero.js/issues"
+  },
   "dependencies": {
     "joi": "^6.10.1",
     "lodash": "^3.10.1",
@@ -29,5 +44,10 @@
     "mocha": "^2.3.4",
     "should": "^7.1.1",
     "walkdir": "0.0.11"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
