--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "async": "^1.5.0",
     "chai": "^3.4.1",
     "config-sp": "^0.1.0",
+    "cz-conventional-changelog": "^1.1.5",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
     "gulp-bump": "^1.0.0",
