chore(gulp): add missing gulp dep

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cz-conventional-changelog": "^1.1.5",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^2.1.1",
+    "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-conventional-changelog": "^0.7.0",
@@ -42,6 +43,7 @@
     "gulp-filter": "^3.0.1",
     "gulp-license": "^1.0.0",
     "ioredis": "^1.9.0",
+    "minimist": "^1.2.0",
     "mocha": "^2.3.4",
     "should": "^7.1.1",
     "walkdir": "0.0.11"
