--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
   "devDependencies": {
     "config-sp": "^0.1.1",
     "cz-conventional-changelog": "^1.1.5",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^2.1.1",
+    "eslint": "^2.0.0-beta.2",
+    "eslint-config-adoyle-style": "^0.1.1",
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-conventional-changelog": "^0.7.0",
-    "gulp-eslint": "^1.1.1",
+    "gulp-eslint": "^2.0.0-rc-3",
     "gulp-filter": "^3.0.1",
     "gulp-license": "^1.0.0",
     "minimist": "^1.2.0",
