--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sprintf-js": "^1.0.3"
   },
   "devDependencies": {
+    "a-gulp-license": "^2.0.0",
     "config-sp": "^0.1.1",
     "cz-conventional-changelog": "^1.1.5",
     "eslint": "^2.0.0-beta.2",
@@ -39,7 +40,6 @@
     "gulp-conventional-changelog": "^0.7.0",
     "gulp-eslint": "^2.0.0-rc-3",
     "gulp-filter": "^3.0.1",
-    "gulp-license": "^1.0.0",
     "minimist": "^1.2.0",
     "mocha": "^2.3.4",
     "should": "^7.1.1",
