chore: update jsduck and package.json

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "a-gulp-license": "^2.0.0",
     "config-sp": "^0.1.1",
     "cz-conventional-changelog": "^1.1.5",
-    "eslint": "^2.0.0-beta.2",
-    "eslint-config-adoyle-style": "^0.1.1",
+    "eslint": "2.7.0",
+    "eslint-config-adoyle-style": "0.3.2",
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
     "gulp-cached": "^1.1.0",
