--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-filter": "^3.0.1",
     "minimist": "^1.2.0",
     "mocha": "^2.3.4",
+    "run-sequence": "^1.2.1",
     "should": "^7.1.1",
     "walkdir": "0.0.11"
   },
