chore: upgrade eslint config

--- a/package.json
+++ b/package.json
@@ -31,13 +31,13 @@
   "devDependencies": {
     "a-gulp-license": "^2.0.0",
     "config-sp": "^0.1.1",
-    "eslint": "2.13.1",
-    "eslint-config-adoyle-style": "0.4.2",
+    "eslint": "^3.5.0",
+    "eslint-config-adoyle-style": "^2.0.1",
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
     "gulp-cached": "^1.1.0",
     "gulp-conventional-changelog": "^1.1.0",
-    "gulp-eslint": "github:adoyle-h/gulp-eslint#a2.7.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-filter": "^3.0.1",
     "minimist": "^1.2.0",
     "mocha": "^2.3.4",
