--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
     "root": true,
-    "extends": "adoyle-style/node"
+    "extends": "adoyle-style/node",
+    "rules": {
+        strict: 0,
+    },
 }
