chore: update gulp tasks && update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
 language: node_js
 
 node_js:
+  - "6.9.2"
   - "6.1"
   - "5.11"
   - "5.0"
@@ -21,12 +22,12 @@ node_js:
   - "4.0"
 
 before_install:
-  - t=3.3 && v=`npm -v` && x=`printf "$v\n$t" | sort -V | head -n 1` && [ $x != $t ] && npm install -g npm || echo "no need to upgrade npm."
+  - t=4.0.5 && v=`npm -v` && x=`printf "$v\n$t" | sort -V | head -n 1` && [ $x != $t ] && npm install -g npm || echo "no need to upgrade npm."
 
 install:
   - npm install
   - npm install -g gulp
 
 script:
-  - gulp lint
-  - gulp test
+  - npm run lint
+  - npm run test-cov
