--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "gulp-bump": "^2.5.1",
     "gulp-cached": "^1.1.0",
     "gulp-conventional-changelog": "^1.1.0",
-    "gulp-eslint": "^3.0.1",
     "gulp-filter": "^4.0.0",
+    "gulp-shell": "^0.5.2",
     "minimist": "^1.2.0",
     "mocha": "^3.2.0",
     "npm-run-all": "^3.1.2",
